RESOLVED FIXED171946
[MediaStream] CoreAudioCaptureSource claims to never be muted
https://bugs.webkit.org/show_bug.cgi?id=171946
Summary [MediaStream] CoreAudioCaptureSource claims to never be muted
Eric Carlson
Reported 2017-05-10 14:31:08 PDT
CoreAudioCaptureSource claims to never be muted.
Attachments
Proposed patch. (1.32 KB, patch)
2017-05-10 14:37 PDT, Eric Carlson
no flags
Patch for landing. (1.31 KB, patch)
2017-05-10 20:41 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2017-05-10 14:33:41 PDT
Eric Carlson
Comment 2 2017-05-10 14:37:13 PDT
Created attachment 309637 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2017-05-10 15:03:20 PDT
Comment on attachment 309637 [details] Proposed patch. Rejecting attachment 309637 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 309637, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: fs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 216624 = 1550d393646dad2f303400c3c6d6834f8c53ad74 r216625 = 9af7b4b5f7b3893ef65d6837b246aad4e9bfb3e0 r216628 = 491759166b2ab3cedec45658d53eb3bb48457c65 r216629 = b87d50156f2b2096de859ef90ac041565f4e1291 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: http://webkit-queues.webkit.org/results/3714057
Eric Carlson
Comment 4 2017-05-10 20:41:36 PDT
Created attachment 309687 [details] Patch for landing.
WebKit Commit Bot
Comment 5 2017-05-10 21:22:11 PDT
Comment on attachment 309687 [details] Patch for landing. Clearing flags on attachment: 309687 Committed r216650: <http://trac.webkit.org/changeset/216650>
Note You need to log in before you can comment on or make changes to this bug.