[MediaStream] CoreAudioCaptureSource claims to never be muted https://bugs.webkit.org/show_bug.cgi?id=171946 <rdar://problem/32111991>

Reviewed by Jer Noble.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::stopProducingData): Set m_muted to true.


Canonical link: https://commits.webkit.org/188887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216650 268f45cc-cd09-0410-ab3c-d52691b4dbfc